<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="5dp"
    android:gravity="center"
    tools:context="com.example.lamlethanhthe.studyhelper.ReminderSetActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:layout_weight="9"
            android:textAlignment="center"
            android:id="@+id/txtRemDate"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="48dp"
            android:src="@mipmap/ic_today_black_48dp"
            android:id="@+id/imgRemDate"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:layout_weight="9"
            android:id="@+id/txtRemTime"
            android:textAlignment="center"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="48dp"
            android:src="@mipmap/ic_access_time_black_48dp"
            android:id="@+id/imgRemTime"/>

    </LinearLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_set_alarm_repeat"
        android:textSize="18sp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="start|center_vertical"
        android:id="@+id/chkRemRepeat"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_gravity="end|center_vertical"
        android:textAlignment="textEnd"
        android:id="@+id/txtRemRepeat"/>
    
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:visibility="invisible"
        android:id="@+id/rgRep">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_day"
            android:textSize="18sp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:id="@+id/rbRepDay"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_week"
            android:textSize="18sp"
            android:id="@+id/rbRepWeek"/>

    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_confirm"
        android:onClick="confirm"/>

</LinearLayout>
