<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lamlethanhthe.studyhelper.MainMenuActivity">>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:onClick="invokeMap">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/route" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/title_feat_maps"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:onClick="invokeNote">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/list" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/title_feat_note"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:onClick="invokeAbout">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/info" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/title_about"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@android:color/holo_orange_light"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textStyle="italic"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:text="@string/hint_specialized"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:onClick="invokeConfig">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/user" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="Thiết lập thi"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:onClick="invokeWeb">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/web2"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="Web quản lí thi"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:onClick="invokeSchedules">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/book" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="Lịch thi"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@android:color/holo_purple"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>